--- a/pom.xml
+++ b/pom.xml
@@ -218,6 +218,10 @@ under the License.
               <postBuildHookScript>verify</postBuildHookScript>
               <localRepositoryPath>${project.build.directory}/local-repo</localRepositoryPath>
               <settingsFile>src/it/settings.xml</settingsFile>
+              <pomExcludes>
+                <pomExclude>mskins-31/pom.xml</pomExclude>
+                <pomExclude>mskins-47/pom.xml</pomExclude>
+              </pomExcludes>
               <pomIncludes>
                 <pomInclude>*/pom.xml</pomInclude>
               </pomIncludes>
@@ -532,7 +536,7 @@ under the License.
                   <outputDirectory>${project.build.directory}/site/mskins-28/</outputDirectory>
                 </configuration>
               </execution>
-              <execution>
+              <!--execution>
                 <id>copy-mskins-31</id>
                 <phase>site</phase>
                 <goals>
@@ -546,7 +550,7 @@ under the License.
                   </resources>
                   <outputDirectory>${project.build.directory}/site/mskins-31/</outputDirectory>
                 </configuration>
-              </execution>
+              </execution-->
               <execution>
                 <id>copy-mskins-33</id>
                 <phase>site</phase>
