Make the hamburger menu work with the top-navigation enabled and sidebar-navigation disabled
Rebased 7a8b3e2a0012f55ded4560030db2e2f91dbf19f4 on top of maven-fluido-skin-1.7

--- a/pom.xml
+++ b/pom.xml
@@ -29,8 +29,9 @@ under the License.
     <relativePath>../../pom/maven/maven-skins/pom.xml</relativePath>
   </parent>
 
+  <groupId>com.github.joshelser</groupId>
   <artifactId>maven-fluido-skin</artifactId>
-  <version>1.7</version>
+  <version>1.7-HBase-SNAPSHOT</version>
 
   <name>Apache Maven Fluido Skin</name>
   <description>The Apache Maven Fluido Skin is an Apache Maven site skin
